--- a/solutions/monitoring_azure_native/index.asciidoc
+++ b/solutions/monitoring_azure_native/index.asciidoc
@@ -1,13 +1,13 @@
 //Category=Monitoring
 //Platform=Azure
-//Maturity level=Advanced
+//Maturity level=Complete
 
 :toc: macro
 toc::[]
 :idprefix:
 :idseparator: -
 
-== Monitoring Solution Azure Native
+== Monitoring Solutions - Azure Native
 === Application Monitoring
 ==== Overview
 
@@ -139,7 +139,30 @@ Comments:
 * *Visualization/ Alerting (Monitoring Plane)*
 +
 --
-See the options below for dashboarding/ visualization:
+
+Various options inside Azure and by external tools such as Grafana exist. If you are using Grafana you have to (1) find a hosting option and (2) have to connect Grafana with Azure.
+
+The basic options are either using the (1) https://devblogs.microsoft.com/devops/monitoring-azure-by-using-grafana-dashboards/[Grafana cloud] or (2) hosting Grafana in Azure.
+The hosting options within Azure can be further diveded into configurations where a https://bitnami.com/stack/grafana/cloud/azure[single VM] with Grafana preinstalled is enough or more sophisticated high availability configurations with additional redundancy on node/ VM level.Hosting options with additional redundancy include:
+
+** Installing Grafana on multiple nodes as described https://azure.microsoft.com/de-de/blog/deploying-grafana-for-production-deployments-on-azure/[here] via Bitnami Grafana Multi-Tier offering through the Azure Marketplace *(Recommended way)*.
+** Installing Grafana on managed apache cluster instance as described https://docs.microsoft.com/en-us/azure/managed-instance-apache-cassandra/visualize-prometheus-grafana[here]
+** Installing Grafana on Kubernetes Cluster as described https://grafana.com/docs/grafana/latest/installation/kubernetes/[here]
+
+For connecting Grafana with data source in Azure the options below exist. This also means that Grafana cannot directly connect to Azure Services. Therefore it is required to collect Azure telemetry in Azure places such as Azure Monitor/ Data Explorer:
+
+** Azure Monitor via plugin as described https://grafana.com/grafana/plugins/grafana-azure-monitor-datasource/[here]
+** Azure Data Explorer via plugin as described https://grafana.com/grafana/plugins/grafana-azure-data-explorer-datasource/[here]
+
+Grafana and Azure Monitor provide visualization and alerts. The following recommenations are intended to help to choose:
+
+** *Service Management Tool Integration (ITSM)*: Both can be integrated. See here how to integrate Grafana Events into the https://docs.servicenow.com/bundle/paris-it-operations-management/page/product/event-management/task/grafana-event-integration.html[ITSM tool ServiceNow]. For Azure Monitor https://azure.microsoft.com/en-us/updates/azure-monitor-itsm-connector-for-servicenow-itom-with-secure-export/[connectors] exist that depend on the ServiceNow version and arepartially in preview.
+** Azure Monitor telemetry is also available via other means (Portal etc.)
+** *Cloud agnostic*: Using Grafana opens a cloud agnostic way and could also be used for other clouds
+** Including critical features in Grafana such as alert might require Grafana hosting with additional redundancy
+** Grafana can be integrated with Azure AD or LDAP as described https://community.grafana.com/t/integration-of-grafana-with-azure-active-directory/23425/2[here] for authentication
+
+Grafana is moving to the new version 8.0 which is in public preview (as of 4.11.2021). Machine learning mechanisms e.g. for https://grafana.com/blog/2021/06/08/grafanaconline-2021-your-guide-to-the-newest-announcements-from-grafana-labs/[dynamic thresholds] are only in place for Grafana Cloud users which is possible in Azure. A final decision depends on the priorities e.g. cloud agnostic/ drilldown vs. dynamic thresholds. The table below summarizes the features related to the previously introduced Azure dashbaord. See the options below for dashboarding/ visualization:
 [width="99%",cols="41%,16%,16%,12%,15%",options="header",]
 |===
 |  3+|Azure |Third party
@@ -157,7 +180,6 @@ Regarding components for logs/ metrics:
 
 * Metrics: Pull (Metrics explorer) or push (Kusto query targeting data source) possible
 * Logs: Push to monitoring plane only
-* Grafana can be used for visualization via using a connector for log analytics workspace
 --
 
 ==== When to use
