--- a/solutions/provisioning_azure_azuredevops/index.asciidoc
+++ b/solutions/provisioning_azure_azuredevops/index.asciidoc
@@ -1,13 +1,13 @@
 //Category=Provisioning
 //Platform=Azure
-//Maturity level=Advanced
+//Maturity level=Complete
 
 :toc: macro
 toc::[]
 :idprefix:
 :idseparator: -
 
-== Provisioning Solution Azure Native
+== Provisioning Solutions - Azure DevOps
 === Overview
 
 The cloud native provisioning service in Azure is Azure DevOps formerly known as Team Foundation Server (TFS). Azure DevOps covers the full CI/ CD requiremenzs including project management. Due to its extensive extension features you can also replace features with other alternatives (see also under variations).
