--- a/solutions/endusermgmt_azure_aad/index.asciidoc
+++ b/solutions/endusermgmt_azure_aad/index.asciidoc
@@ -7,6 +7,10 @@ toc::[]
 :idprefix:
 :idseparator: -
 
+include::../../includes/endusermgmt_problem/index.asciidoc[]
+
+include::../../includes/endusermgmt_platforms/index.asciidoc[]
+
 == Enduser Management Solutions - Azure Active Directory
 === Overview Azure Active Directory
 
