--- a/solutions/provisioning_azure_azuredevops/index.asciidoc
+++ b/solutions/provisioning_azure_azuredevops/index.asciidoc
@@ -1,11 +1,16 @@
 //Category=Provisioning
 //Platform=Azure
 //Maturity level=Complete
+//Product=Azure DevOps
 
 :toc: macro
 toc::[]
 :idprefix:
 :idseparator: -
+
+include::../../includes/provisioning_problem/index.asciidoc[]
+
+include::../../includes/provisioning_platforms/index.asciidoc[]
 
 == Provisioning Solutions - Azure DevOps
 === Overview
