--- a/Manual_for_achitecture_browser/index.asciidoc
+++ b/Manual_for_achitecture_browser/index.asciidoc
@@ -74,6 +74,10 @@ only you have to do is to click on "Contributor License Agreement". It will send
 
 It can happen CLA does not work with the firefox browser, in this case simply change your browser.
 
+NOTE: Gitpod is the way to edit online, but to modify locally using on your own editor, refer https://github.com/firstcontributions/first-contributions#first-contributions[first contribution]
+
+
 === Stack specific solution
 
 In devonfw we have the principle that we store the documentation together with the code. This also means that architecture snippets that refer to a specific technology stack such as Java or .net are in the repo of this devonfw stack. To do this, create a “solutions” folder in the “documentation” subfolder of the repository. This then has the same structure internally as the “solutions” folder in the architectures repo. When the website is compiled, the folders of the stack repository are integrated into the folder in the architecture repository.
+
