--- a/solutions/monitoring_openTelemetry/index.asciidoc
+++ b/solutions/monitoring_openTelemetry/index.asciidoc
@@ -57,5 +57,5 @@ For an example of how to use these files, see the link:https://github.com/devonf
 * https://grafana.com/[*Grafana*]
 
 === Related Architectures and Alternatives
-* https://opentracing.io/[*openTracing*]
+* https://opentracing.io/[*openTracing*] (-OpenTracing has been Archived-)
 * https://opencensus.io/[*openCensus*]
