--- a/solutions/monitoring_openTelemetry/IngressSetupAKS.asciidoc
+++ b/solutions/monitoring_openTelemetry/IngressSetupAKS.asciidoc
@@ -37,17 +37,13 @@ Install Nginx ingress controller in kubernetes cluster by using helm chart.
 * Installing the Chart
 If you have Helm, you can deploy the ingress controller with the following command:
 
-AWS - EKS:
-
-	helm upgrade --install nginx-ingress nginx-ingress-controller --set ingressClassResource.default=true --set containerSecurityContext.allowPrivilegeEscalation=false --repo https://charts.bitnami.com/bitnami --namespace nginx-ingress --create-namespace
-
 AZURE - AKS:
 
 	helm install nginx-stable nginx-stable/nginx-ingress --set controller.setAsDefaultIngress=true --namespace nginx-ingress --create-namespace 
 	
 == Examples
 === Providing Dynamic Values to Helm chart
-When installing Helm charts with the helm install command, the `--set` argument allows you to define value in a values.yaml file, `application.cloud` is deployment  environment, aws or azure, `ingress.application.host` is to set host value.
+When installing Helm charts with the helm install command, the `--set` argument allows you to define value in a values.yaml file, `application.cloud` is deployment  environment(AZURE), `ingress.host` is to set host value.
 
-	helm install otlp ./helm --set application.cloud="AWS" --set ingress.application.host="xxx.com"
+	helm install otlp ./helm --set application.cloud="AZURE" --set ingress.host="xxx.com"
 
